fixed links in CV

--- a/cv.html
+++ b/cv.html
@@ -17,7 +17,7 @@
 <body>
 
 <h1>Elizabeth (Beth) Blackwood</h1>
-<p><a href="/"><strong>Home</strong></a> <a href="cv"><strong>CV</strong></a> <a href="http://elizabethblackwood.cikeys.com/workshops"><strong>Workshops</strong></a></p>
+<p><a href="/"><strong>Home</strong></a> <a href="cv"><strong>CV</strong></a> <a href="workshops"><strong>Workshops</strong></a></p>
 <h2>Professional Appointments</h2>
 <table>
 <tbody>
