fixed index links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 <h1>Elizabeth (Beth) Blackwood</h1>
-<p><a href="/"><strong>Home</strong></a> <a href="cv"><strong>CV</strong></a> <a href="http://elizabethblackwood.cikeys.com/workshops"><strong>Workshops</strong></a></p>
+<p><a href="/"><strong>Home</strong></a> <a href="cv"><strong>CV</strong></a> <a href="workshops"><strong>Workshops</strong></a></p>
 <p><img src="bethWEB.JPG" alt="Beth Blackwood at Clifford Steele Museum, photographed by Stewart Engart"  class="shadow-drop-center center" ></p>
 <p>Beth Blackwood is the Digital Curation and Scholarship Librarian at California State University, Channel Islands’ <a href="https://library.csuci.edu/">John Spoor Broome Library</a>. Before joining CI, she spent several years in Washington, D.C. managing digital collections, infrastructure, and change at museums and cultural institutions. She has expertise with digital asset management systems and strategy, digital preservation, research data management, and is passionate about the creative commons.</p>
 <p><strong>Contact:</strong> elizabeth [dot] blackwood [at] csuci [dot] edu</p>
