--- a/workshops.html
+++ b/workshops.html
@@ -19,7 +19,7 @@
 <h1>Elizabeth (Beth) Blackwood</h1>
 <p><a href="/"><strong>Home</strong></a> <a href="cv"><strong>CV</strong></a> <a href="http://elizabethblackwood.cikeys.com/workshops"><strong>Workshops</strong></a></p>
 <h2>Workshop Documentation, Data, &amp; Slides</h2>
-<p><img src="WD-floppy-disk.jpg" alt="A white dog chewing on a tpy floppy disk" /> Above: Beth’s doodle demonstrating the importance of personal digital stewardship.</p>
+<p><img src="WD-floppy-disk.jpg" alt="A white dog chewing on a toy floppy disk" /> Above: Beth’s doodle demonstrating the importance of personal digital stewardship.</p>
 <p>Links and information found on this page relate to workshops and events happening at CSU Channel Islands. Feel free to explore and use the content. Material is licensed through the Creative Commons unless otherwise stated. </p>
 
 <h3>Data Cleaning </h3>
